--- a/.composure/docker-compose.yml
+++ b/.composure/docker-compose.yml
@@ -7,3 +7,17 @@ services:
             dockerfile: ./.composure/Dockerfile
         ports:
             - '3000:3000'
+        networks:
+            - mynet
+    nginx:
+        image: nginx:latest
+        ports:
+            - '80:80'
+        volumes:
+            - ./nginx.conf:/etc/nginx/conf.d/default.conf
+        networks:
+            - mynet
+
+networks:
+    mynet:
+        driver: bridge
