--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
     app:
         build:
-            context: ../
+            context: ./
             dockerfile: ./Dockerfile # target: runner
         ports:
             - '3000:3000'
@@ -19,10 +19,12 @@ services:
         container_name: composure-nginx
         ports:
             - '80:80'
+            - '443:443'
         volumes:
-            - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+            - ./nginx/letsencrypt/:/etc/letsencrypt/
             - ./nginx/conf.d/:/etc/nginx/conf.d/
-            - ./certbot-auth/:/opt/certbot-auth/
+            - ./nginx/certbot-auth/:/opt/certbot-auth/
+            - ./nginx/bin/:/opt/bin/
         networks:
             - mynet
 
