--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
         build:
             context: ./
             dockerfile: ./Dockerfile # target: runner
+        container_name: composure-app
         ports:
             - '3000:3000'
         networks:
