--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,8 @@ git-status.log
 *.tsbuildinfo
 next-env.d.ts
 
-nginx/certboat-auth/*
-!nginx/certboat-auth/.gitkeep
-nginx/conf.d/*
+nginx/conf.d/**/*
 !nginx/conf.d/default.conf
 !nginx/conf.d/*.template
+nginx/letsencrypt/**/*
+!nginx/letsencrypt/.gitkeep
