--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,7 +1,9 @@
+server_name_bucket_size 1024;
 
 server {
   listen 80 default_server;
   location / {
+    add_header Content-Type text/plain;
     return 200 "";
   }
 }
