--- a/nginx/conf.d/domain.template
+++ b/nginx/conf.d/domain.template
@@ -1,9 +1,8 @@
-server {
-    listen       443;  
-    server_name {DOMAIN};
-    ssl    on;
-    ssl_certificate /etc/letsencrypt/live/{DOMAIN}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/{DOMAIN}/privkey.pem;
+
+server {    
+    listen 80;
+    listen [::]:80;
+    server_name  {domain};
 
     location / {
         proxy_pass         http://app:3000/;
