--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
         build:
             context: ./
             dockerfile: ./Dockerfile # target: runner
-        container_name: composure-app
+        container_name: app
         ports:
             - '3000:3000'
         networks:
@@ -17,7 +17,7 @@ services:
         build:
             context: ./nginx
             dockerfile: ./Dockerfile
-        container_name: composure-nginx
+        container_name: nginx
         ports:
             - '80:80'
             - '443:443'
